maprich api add support lang

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -263,13 +263,13 @@
   "product": "Product：",
   "amount": "Amount：",
   "amount_copy_success_hint": "Amount copied successfully",
-  "please_mortgage": "Mortgage",
-  "becharge_amount": "Becharge",
-  "income_amount": "Income",
-  "by_hyn": "Using HYN",
-  "by_mortgage": "Alternative mortgage",
-  "transfer_hyn_hint": "Be sure to transfer the specified HYN amount！",
-  "address_copy_success_hint": "Address replication successful",
+  "please_mortgage": "Please stake",
+  "becharge_amount": "Top-up balane",
+  "income_amount": "Income balance",
+  "by_hyn": "Use HYN",
+  "by_mortgage": "Alternative staking measures",
+  "transfer_hyn_hint": "Confirm to transfer the specified HYN amount！",
+  "address_copy_success_hint": "Address copied successfully",
   "transfer_address": "Transfer address",
   "by_hyn_transfer": "Transfer using HYN wallet",
   "hyn_wallet_open_hint": "HYN wallet is about to open",
@@ -277,83 +277,83 @@
   "over_limit_amount_hint": "Reached the limit",
   "no_transfer_info_hint": "No transfer information found, please try again later",
   "out_wallet_transfer_hint": "I have transferred using an external wallet",
-  "action_success_hint": "Successful operation",
+  "action_success_hint": "Operated successfully",
   "pay_fail_hint": "Payment failed",
-  "transfer_exception_hint": "Transfer exception",
-  "data_exception_hint": "Data is abnormal, please try again",
-  "confirm_mortgage": "Confirm mortgage",
+  "transfer_exception_hint": "Transfer Error",
+  "data_exception_hint": "Data error, please try again later",
+  "confirm_mortgage": "Confirm staking",
   "balance_lack": "Insufficient balance",
-  "click_charge": "Click to recharge",
+  "click_charge": "Click to top-up balance",
   "available_balance_usdt": "Available Balance ${amount} USDT",
   "current_rate_func": "current ${currency} exchange ${quotes} rate is: 1${rate}",
-  "logining": "Logining",
+  "logining": "Logging-in",
   "login": "Login",
   "email_label": "Email",
-  "email_format_error_hint": "Email format is wrong, please enter the correct email",
+  "email_format_error_hint": "Wrong email format, please re-enter",
   "please_input_email_hint": "please input your email",
   "password_label": "Password",
-  "password_format_error_message": "The password format is incorrect. Please enter at least 6 characters",
+  "password_format_error_message": "Incorrect password format. Please enter at least 6 characters",
   "please_input_password_hint": "Please enter the password",
-  "forget_password": "forget password",
+  "forget_password": "forgot your password",
   "register_account": "register",
   "processing": "processing",
   "submit": "submit",
   "modify_success": "Successfully modified",
   "reset_account_password": "Reset account password",
   "verification_code": "Verification code",
-  "please_input_verification_code": "Please enter 6 digit verification code",
-  "get_verification_code_again": "Reacquire ${countdownTime}",
+  "please_input_verification_code": "Please enter 6-digit verification code",
+  "get_verification_code_again": "Resend ${countdownTime}",
   "send_verification_code": "Send",
   "account_new_password": "New password",
-  "password_length_error_message": "Please enter a password of at least 6 character",
+  "password_length_error_message": "Please enter a password (6 characters minimum)",
   "confirm_password_label": "Confirm new password",
   "register": "register",
-  "register_success": "registration success",
+  "register_success": "registered successfully",
   "register_email": "register email",
   "invitation_code": "invitation code",
-  "please_input_invitation_code": "Please enter 6 characters invitation code",
+  "please_input_invitation_code": "Please enter the invitation code (6 characters minimum)",
   "account_password": "account password",
-  "fundz_password": "fund password",
-  "fund_password_format_error_message": "The fund password format is incorrect. Please enter at least 6 characters",
-  "fund_password_length_error_message": "Please enter a fund password of at least 6 character",
+  "fundz_password": "fund security password",
+  "fund_password_format_error_message": "Incorrect fund password format. Please enter at least 6 characters",
+  "fund_password_length_error_message": "Please enter a fund password (6 characters minimum)",
   "no_level": "No Level",
   "task": "Task",
-  "my_account_with_unit": "Account(USDT)",
-  "my_power_with_unit": "Power(T)",
-  "node_mortgage_with_unit": "Mortgage(USDT)",
-  "get_power": "Get Power",
-  "node_mortgage": "Node Mortgage",
+  "my_account_with_unit": "My account(USDT)",
+  "my_power_with_unit": "My Computing Power(T)",
+  "node_mortgage_with_unit": "Node Staking(USDT)",
+  "get_power": "Get Computing Power",
+  "node_mortgage": "Node Staking",
   "task_record": "Task Record",
   "invite_share": "Invite and share",
-  "use_guide": "Use Tutorial",
-  "dmap_setting": "DMap Setting",
-  "thank_you_for_contribute_data": "Thank you for your contribution。",
-  "withdrawal": "Withdrawal",
-  "recharge": "Recharge",
-  "balance_with_unit": "Balance(USDT)",
+  "use_guide": "Read Tutorial",
+  "dmap_setting": "DMap Settings",
+  "thank_you_for_contribute_data": "Thank you for your data contribution。",
+  "withdrawal": "Withdraw",
+  "recharge": "Top-up",
+  "balance_with_unit": "Account Balance(USDT)",
   "earnings_balance": "Earnings\nBalance",
-  "recharge_balance": "Recharge\nBalance",
-  "bill_flow": "Bills",
-  "withdrawal_records": "Withdrawal",
-  "withdrawal_with_quantity": "Withdrawal：${count}",
+  "recharge_balance": "Top-up\nBalance",
+  "bill_flow": "Transactions",
+  "withdrawal_records": "Withdrawal record",
+  "withdrawal_with_quantity": "Withdraw：${count}",
   "poundage_with_quantity": "Fee：${poundage}",
   "safety_verify": "Safety verification",
   "fund_password": "Fund password",
   "please_input_fund_pwd_hint": "Please enter the fund password",
-  "fail_get_user_recharge_address_hint": "Failed to get user recharge address",
+  "fail_get_user_recharge_address_hint": "Top-up address could not be found",
   "current_exchange_rate": "Current ${to} Exchange ${currency} Rate:",
   "Tips": "Tips",
   "no_wallet_hint": "You don't have a wallet yet.",
   "create": "Create",
-  "recharge_success_hint": "Recharge successful",
-  "transfer_warning_hint": "Do not transfer non-HYN assets to the above address, otherwise the assets will not be recovered. After you transfer in, you need to confirm the entire network node, which takes about 10-30 minutes",
+  "recharge_success_hint": "Top-up successful",
+  "transfer_warning_hint": "Do not transfer non-HYN assets to the above address, otherwise the assets will not be recovered. After you transfer-in, you need to wait for the entire network nodes to confirm, which takes about 10-30 minutes",
   "task_finish_day_hint": "Task completed for the day",
-  "task_finish_func": "Already done the task ${total} time",
+  "task_finish_func": "Already completed ${total} tasks",
   "time_f": "time:",
   "load_fail_click_hint": "Loading failed, click to retry",
   "the_horizon_hint": "—— This is the horizon ——",
   "click_retry_hint": "Click to retry",
-  "network_exception_hint": "Network anomaly~",
+  "network_exception_hint": "Network failed~",
   "star_number": "Stars",
   "direct_star_numbers": "Direct",
   "max_star_numbers": "Maximum",
@@ -361,76 +361,69 @@
   "by_recommend": "Recommended by ${getParentEmail}",
   "invite_link_copy_hint": "Invitation link copied",
   "invite_link": "Invitation link",
-  "no_invite_success_hint": "You haven't successfully invited people~",
-  "invitate_qr": "Inviting QR Code",
-  "invite_join": "Invite you to join",
+  "no_invite_success_hint": "You haven't invited anyone yet~",
+  "invitate_qr": "Invitation QR Code",
+  "invite_join": "You are invited",
   "check_update": "Check for updates",
   "contact_customer_service": "Contact Customer Service",
-  "already_latest_version_hint": "Already the latest version",
-  "max_withdrawal_quantity": "Max Withdrawal ${maxWithdrawal} USDT",
-  "hyn_withdrawal_coin_address": "HYN Address",
+  "already_latest_version_hint": "latest version already installed",
+  "max_withdrawal_quantity": "Max. Withdrawal ${maxWithdrawal} USDT",
+  "hyn_withdrawal_coin_address": "HYN withdrawal Address",
   "my_wallet_address": "My Wallet Address",
-  "please_input_hyn_address": "Please input hyn address",
-  "no_eth_address": "No ethereum address ",
+  "please_input_hyn_address": "Please input HYN address",
+  "no_eth_address": "Not ETH address ",
   "quantity": "Quantity",
-  "please_input_withdrawal_quantity": "Please input withdrawal quantity ",
+  "please_input_withdrawal_quantity": "Please input withdrawal amount ",
   "withdrawal_fee": "Fee(${fee}%)",
   "amount_received": "Amount Received",
-  "withdrawal_audit_message": "Convert the corresponding HYN to your withdrawal address. In order to ensure the safety of funds, we will carry out manual audit on the withdrawal. Withdrawal processing time: 9:00 am - 21:00 PM on the day of receipt, non-working time received orders will be received the next day.",
-  "over_max_withdrawal": "Exceed the maximum withdrawal limit",
+  "withdrawal_audit_message": "Convert the corresponding HYN to your withdrawal address. In order to secure the funds, we will manually check the withdrawal. Withdrawal processing time: same day receipt during 9:00 am - 21:00 PM , next day receipt during non-working hours .",
+  "over_max_withdrawal": "Exceeded the maximum withdrawal limit",
   "below_min_withdrawal": "Below the minimum withdrawal limit",
   "please_input_hyn_withdrawal_address": "Please enter the HYN address",
-  "withdrawal_apply_success": "Withdrawal application successfully",
+  "withdrawal_apply_success": "Withdrawal application is successful",
   "withdrawal_fail": "Withdrawal error",
   "without_hyn_wallet": "You don't have a HYN wallet yet.",
-  "my_total_power": "My Total Power",
+  "my_total_power": "My Total Computing Power",
   "effective": "Effective",
   "finished": "Finished",
-  "my_node_mortgage": "My Node Mortgage",
-  "redemption_mortgage": "Redemption Mortgage",
-  "redemption_success": "Redemption Success",
+  "my_node_mortgage": "My Node Staking",
+  "redemption_mortgage": "Redemption Staking",
+  "redemption_success": "Redemption Successful",
   "redemption_fail": "Redemption Error",
   "mortgage_time": "Time：${time}",
   "mortgage_id": "ID：${id}",
   "wx_id": "WeChat ID：titan654321",
-  "copy_wx_id_success_hint": "Copying WeChat success",
-  "sweep_qr_hint": "Sweep the QR code pattern above, add me on WeChat",
-  "node_mortgage_in_out_hint": "Node mortgages, go in and out, unlimited time。",
-  "node_has_squat_hint": "Node has been squatted out",
+  "copy_wx_id_success_hint": "WeChat ID copied successfully",
+  "sweep_qr_hint": "Scan the QR code above to add me on WeChat",
+  "node_mortgage_in_out_hint": "Join or cancel staking at anytime。",
+  "node_has_squat_hint": "Snap-up finished",
   "node_introduction": "Node introduction",
-  "cybersquatting": "Squat",
-  "stay_func": " stay ${snapUpStocks}",
+  "cybersquatting": "Snap up",
+  "stay_func": " remaining ${snapUpStocks}",
   "income_func": "${incomeCycle} day income",
-  "mortgage_product_func": "Mortgage products：${name}",
-  "Insufficient_balance_hint": "Insufficient balance available for collateral",
-  "mortgage_success_hint": "Mortgage success",
-  "tip_node_mortgages_balances_hint": "Tip: node mortgages can only be used with earnings balances",
+  "mortgage_product_func": "Stakable products：${name}",
+  "Insufficient_balance_hint": "Insufficient balance available for staking",
+  "mortgage_success_hint": "Staked successfully",
+  "tip_node_mortgages_balances_hint": "Note: Only income balance is stakable",
   "snap_up": "Snap Up",
   "snap_up_product_fuc": "Snap Up Products：${name}",
   "need_transfer": "Need Transfer",
-  "snap_up_success_hint": "Snap up success",
-  "snap_up_fail": "Snap up failure",
+  "snap_up_success_hint": "Successfully Snap up",
+  "snap_up_fail": "Snap up failed",
   "confirm_snap_up": "Confirm",
-  "tip_snap_up_balance_hint": "Tip: The cybersquatting node can only use the recharge balance for collateral",
+  "tip_snap_up_balance_hint": "Tip: Snap up node can only stake with top-up balance",
   "map_ai_verificate": "Map AI verification",
   "turn_on_wifi_hint": "Turn on WiFi to scan more accurate signal maps",
-  "all_powers_func": "Total Power：${totalPower}",
+  "all_powers_func": "Total Computing Power：${totalPower}",
   "background_scan": "Background scan",
   "max_range_func": "Maximum range：${maxMeter} m",
   "total_invitation_func": "${totalInvitations} invited",
-  "grade": "Grade",
+  "grade": "Level",
   "current_grade": "Current Level",
-  "no_grade": "No rank",
+  "no_grade": "No level",
   "contribute_reward_func": "Contribution Reward： ${award}",
   "grade_require_func": "Level Requirements： ${require}",
-  "revenue_details": "Revenue details",
-  "city_recommendation": "City Recommend",
-  "search_exception": "Search Exception",
-  "ciphertext_exception_hint": "The ciphertext is invalid or expired",
-  "not_valid_public_key": "Not a valid public key",
-  "setting": "Setting",
-  "language": "Language",
-  "simple_chinese": "简体中文",
+  "revenue_details": "Income details",
   "personal_information": "Personal Information",
   "modify_account_password": "modify account password",
   "modify_fund_password": "modify fund password",
@@ -439,6 +432,13 @@
   "please_input_account_password": "please input account password",
   "fund_new_password": "New fund password",
   "confirm_new_fund_password": "Confirm fund password",
-  "fund_password_not_equal_confirm_fund_password": "Fund password is not equal confirmed",
-  "re_enter_fund_password": "Re-enter fund password"
+  "fund_password_not_equal_confirm_fund_password": "The two passwords don't match",
+  "re_enter_fund_password": "Re-enter fund password",
+  "city_recommendation": "City Recommend",
+  "search_exception": "Search Exception",
+  "ciphertext_exception_hint": "The ciphertext is invalid or expired",
+  "not_valid_public_key": "Not a valid public key",
+  "setting": "Setting",
+  "language": "Language",
+  "simple_chinese": "简体中文"
 }
