remove simple_chinese string key

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -439,6 +439,5 @@
   "ciphertext_exception_hint": "암호문이 유효하지 않거나 만료됨",
   "not_valid_public_key": "합법적인 공개 키가 아닙니다.",
   "setting": "설정",
-  "language": "언어",
-  "simple_chinese": "简体中文"
+  "language": "언어"
 }
