--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -439,6 +439,5 @@
   "ciphertext_exception_hint": "The ciphertext is invalid or expired",
   "not_valid_public_key": "Not a valid public key",
   "setting": "Setting",
-  "language": "Language",
-  "simple_chinese": "简体中文"
+  "language": "Language"
 }
