--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -439,5 +439,6 @@
   "ciphertext_exception_hint": "密文无效或已过期",
   "not_valid_public_key": "不是合法的公钥",
   "setting": "设置",
-  "language": "语言切换"
+  "language": "语言切换",
+  "task_interval_below_limit": "做任务间隔低于30分钟"
 }
