--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -321,7 +321,7 @@
   "my_account_with_unit": "My account(USDT)",
   "my_power_with_unit": "My Computing Power(T)",
   "node_mortgage_with_unit": "Node Staking(USDT)",
-  "get_power": "Get Computing Power",
+  "get_power": "Computing Power",
   "node_mortgage": "Node Staking",
   "task_record": "Task Record",
   "invite_share": "Invite and share",
