[edit] edit language

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -318,10 +318,10 @@
   "fund_password_length_error_message": "Please enter a fund password (6 characters minimum)",
   "no_level": "No Level",
   "task": "Task",
-  "my_account_with_unit": "My account(USDT)",
-  "my_power_with_unit": "My Computing Power(T)",
-  "node_mortgage_with_unit": "Node Staking(USDT)",
-  "get_power": "Computing Power",
+  "my_account_with_unit": "Account(USDT)",
+  "my_power_with_unit": "Power(T)",
+  "node_mortgage_with_unit": "Node(USDT)",
+  "get_power": "Get Power",
   "node_mortgage": "Node Staking",
   "task_record": "Task Record",
   "invite_share": "Invite and share",
