--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -399,7 +399,7 @@
   "node_has_squat_hint": "Snap-up finished",
   "node_introduction": "Node introduction",
   "cybersquatting": "Snap up",
-  "stay_func": " remaining ${snapUpStocks}",
+  "stay_func": " left ${snapUpStocks}",
   "income_func": "${incomeCycle} day income",
   "mortgage_product_func": "Stakable products：${name}",
   "Insufficient_balance_hint": "Insufficient balance available for staking",
@@ -440,5 +440,22 @@
   "not_valid_public_key": "Not a valid public key",
   "setting": "Setting",
   "language": "Language",
-  "task_interval_below_limit": "Do task intervals below 30 minutes"
+  "task_interval_below_limit": "Do task intervals below 30 minutes",
+  "today_complete_hint": "Today's task is completed. Thank you for your data",
+  "psw_reset_error_hint": "Password reset error",
+  "username_pwd_not_match_hint": "The username and password do not match",
+  "invite_code_error_hint": "Invitation code error",
+  "verify_code_error_hint": "Verification code error",
+  "update_user_info_fail_hint": "Failed to update user information",
+  "account_exist_hint": "The account already exists, please log in the account directly",
+  "create_user_fail_hint": "Failed to create user",
+  "net_error_hint": "Network error",
+  "no_content_hint": "There is no content",
+  "content_conflict_hint": "Content of the conflict",
+  "insufficient_permission_hint": "Insufficient permissions",
+  "unauthorized": "unauthorized",
+  "para_error_hint": "Parameter error",
+  "unknown_error_hint": "An unknown error",
+  "fund_pwd_error_hint": "Fund password error",
+  "over_limit_hint": "More than limit"
 }
