--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -440,5 +440,22 @@
   "not_valid_public_key": "합법적인 공개 키가 아닙니다.",
   "setting": "설정",
   "language": "언어",
-  "task_interval_below_limit": "30 분 미만의 작업 간격 수행"
+  "task_interval_below_limit": "30 분 미만의 작업 간격 수행",
+  "today_complete_hint": "오늘 과제가 완료되었습니다. 기여해 주셔서 감사합니다.",
+  "psw_reset_error_hint": "비밀번호 재설정 오류",
+  "username_pwd_not_match_hint": "사용자 이름과 비밀번호가 일치하지 않습니다",
+  "invite_code_error_hint": "잘못된 초대 코드",
+  "verify_code_error_hint": "인증 코드 오류",
+  "update_user_info_fail_hint": "사용자 정보 업데이트 실패",
+  "account_exist_hint": "계정이 이미 존재합니다. 직접 로그인하십시오",
+  "create_user_fail_hint": "사용자 생성 실패",
+  "net_error_hint": "네트워크 오류",
+  "no_content_hint": "내용이 없습니다",
+  "content_conflict_hint": "콘텐츠 충돌",
+  "insufficient_permission_hint": "권한 부족",
+  "unauthorized": "무단",
+  "para_error_hint": "파라미터 에러",
+  "unknown_error_hint": "알 수없는 오류",
+  "fund_pwd_error_hint": "자금 조달 비밀번호 오류",
+  "over_limit_hint": "한도 초과"
 }
