--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -118,14 +118,14 @@
   "private_wallet_tips": "Private key never leaves your device",
   "create_wallet_tips": "Create a private account",
   "create_wallet_name_label": "Wallet Name",
-  "input_wallet_name_hint": "Please input wallet name",
-  "input_wallet_name_length_hint": "Name must be within 6 characters",
+  "input_wallet_name_hint": "Input wallet name",
+  "input_wallet_name_length_hint": "Name must be within 6 chars",
   "create_wallet_password_label": "Wallet Password",
-  "input_wallet_password_length_hint": "Wallet password must be at least 6 characters",
+  "input_wallet_password_length_hint": "Wallet password must be at least 6 chars",
   "reinput_wallet_password_label": "Confirm Wallet Password",
-  "input_password_again_hint": "Please re-enter the password",
+  "input_password_again_hint": "Re-enter the password",
   "password_not_equal_hint": "Inconsistent passwords",
-  "input_confirm_wallet_password_hint": "Please re-enter a wallet password of at least 6 characters",
+  "input_confirm_wallet_password_hint": "re-enter a wallet password of at least 6 chars",
   "next": "continue",
   "account_backup_notice": "Back up your account now",
   "account_backup_next_step_notice": "Next, you will see 12 recovery words in an order that allow you to recover your account",
@@ -153,7 +153,7 @@
   "wallet_manage": "Manage Wallet",
   "wallet_setting": "Wallet Settings",
   "wallet_name": "Wallet Name",
-  "please_input_wallet_name": "Please input wallet name",
+  "please_input_wallet_name": "Input wallet name",
   "backup_option": "Backup Options",
   "show_mnemonic_label": "Show Mnemonic Phrases",
   "wallet_setting_backup_notice": "If you cannot access this device, your funds will not be recovered unless you back it up!",
@@ -292,7 +292,7 @@
   "email_format_error_hint": "Wrong email format, please re-enter",
   "please_input_email_hint": "please input your email",
   "password_label": "Password",
-  "password_format_error_message": "Incorrect password format. Please enter at least 6 characters",
+  "password_format_error_message": "Incorrect password format. Please enter at least 6 chars",
   "please_input_password_hint": "Please enter the password",
   "forget_password": "forgot your password",
   "register_account": "register",
@@ -301,21 +301,21 @@
   "modify_success": "Successfully modified",
   "reset_account_password": "Reset account password",
   "verification_code": "Verification code",
-  "please_input_verification_code": "Please enter 6-digit verification code",
+  "please_input_verification_code": "Enter 6-digit valid code",
   "get_verification_code_again": "Resend ${countdownTime}",
   "send_verification_code": "Send",
   "account_new_password": "New password",
-  "password_length_error_message": "Please enter a password (6 characters minimum)",
+  "password_length_error_message": "Enter a password (6 chars mini)",
   "confirm_password_label": "Confirm new password",
   "register": "register",
   "register_success": "registered successfully",
   "register_email": "register email",
   "invitation_code": "invitation code",
-  "please_input_invitation_code": "Please enter the invitation code (6 characters minimum)",
+  "please_input_invitation_code": "Please enter the invitation code (6 chars minimum)",
   "account_password": "account password",
   "fundz_password": "fund security password",
-  "fund_password_format_error_message": "Incorrect fund password format. Please enter at least 6 characters",
-  "fund_password_length_error_message": "Please enter a fund password (6 characters minimum)",
+  "fund_password_format_error_message": "Incorrect fund password format. Please enter at least 6 chars",
+  "fund_password_length_error_message": "Enter a fund password (6 chars minimum)",
   "no_level": "No Level",
   "task": "Task",
   "my_account_with_unit": "Account(USDT)",
@@ -429,7 +429,7 @@
   "modify_fund_password": "modify fund password",
   "login_out": "sign out",
   "reset_fund_password": "reset fund password",
-  "please_input_account_password": "please input account password",
+  "please_input_account_password": "Input account password",
   "fund_new_password": "New fund password",
   "confirm_new_fund_password": "Confirm fund password",
   "fund_password_not_equal_confirm_fund_password": "The two passwords don't match",
