--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -250,7 +250,7 @@
   "my_position": "내 위치",
   "get_powers": "컴퓨팅 파워 확보",
   "node_martgage": "노드 모기지",
-  "available_mortgage_numbers": "${number}이용 가능한 사본",
+  "available_mortgage_numbers": "저당 ${number} 부",
   "commiting": "제출",
   "mortgage": "모기지",
   "free_receive": "무료 픽업",
@@ -364,14 +364,14 @@
   "node_mortgage_in_out_hint": "노드는 언제든지 모기지로 들어오고 나갑니다.",
   "node_has_squat_hint": "노드가 쿼트되었습니다",
   "node_introduction": "노드 소개",
-  "cybersquatting": "사이버 스쿼팅",
+  "cybersquatting": "사재기",
   "stay_func": "남은 ${snapUpStocks}",
   "income_func": "${incomeCycle}일 출력",
   "mortgage_product_func": "모기지 제품：${name}",
   "Insufficient_balance_hint": "담보를위한 잔액 부족",
   "mortgage_success_hint": "모기지 성공",
   "tip_node_mortgages_balances_hint": "팁 : 노드 담보는 출력 밸런스에만 사용할 수 있습니다",
-  "snap_up": "사이버 스쿼팅",
+  "snap_up": "사재기",
   "snap_up_product_fuc": "사이버 스쿼팅 제품：${name}",
   "need_transfer": "양도 필요",
   "snap_up_success_hint": "사이버 스쿼팅 성공",
