add switch market price unit

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -248,5 +248,7 @@
   "navigation": "Start",
   "my_location": "My Location",
   "setting": "Setting",
-  "language": "Language"
+  "language": "Language",
+  "hynPriceUnit": "USD",
+  "hynPriceUnitSymbol": "\$"
 }
