--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -248,5 +248,7 @@
   "navigation": "导航",
   "my_location": "我的位置",
   "setting": "设置",
-  "language": "语言"
+  "language": "语言",
+  "hynPriceUnit": "CNY",
+  "hynPriceUnitSymbol": "¥"
 }
