--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -248,5 +248,11 @@
   "navigation": "导航",
   "my_location": "我的位置",
   "setting": "设置",
-  "language": "语言"
+  "language": "语言",
+  "cafe": "咖啡馆",
+  "hospital": "医院",
+  "mainland_china": "中国大陆",
+  "other_area": "其他地区",
+  "app_area_setting": "区域",
+  "please_selecte_app_area": "请设置地图使用区域"
 }
