--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -357,10 +357,10 @@
   "star_number": "Stars",
   "direct_star_numbers": "Direct",
   "max_star_numbers": "Maximum",
-  "other_star_numbers": "Other",
+  "other_star_numbers": "Others",
   "by_recommend": "Recommended by ${getParentEmail}",
-  "invite_link_copy_hint": "Invitation link copied",
-  "invite_link": "Invitation link",
+  "invite_link_copy_hint": "Share link copied",
+  "invite_link": "Share ink",
   "no_invite_success_hint": "You haven't invited anyone yet~",
   "invitate_qr": "Invitation QR Code",
   "invite_join": "Welcome to",
@@ -399,7 +399,7 @@
   "node_has_squat_hint": "Snap-up finished",
   "node_introduction": "Node introduction",
   "cybersquatting": "Snap up",
-  "stay_func": " left ${snapUpStocks}",
+  "stay_func": "${snapUpStocks} left",
   "income_func": "${incomeCycle} day income",
   "mortgage_product_func": "Stakable products：${name}",
   "Insufficient_balance_hint": "Insufficient balance available for staking",
@@ -417,7 +417,7 @@
   "all_powers_func": "Total Computing Power：${totalPower}",
   "background_scan": "Background scan",
   "max_range_func": "Maximum range：${maxMeter} m",
-  "total_invitation_func": "${totalInvitations} invited",
+  "total_invitation_func": "${totalInvitations} invitee",
   "grade": "Level",
   "current_grade": "Current Level",
   "no_grade": "No level",
@@ -438,7 +438,7 @@
   "search_exception": "Search Exception",
   "ciphertext_exception_hint": "The ciphertext is invalid or expired",
   "not_valid_public_key": "Not a valid public key",
-  "setting": "Setting",
+  "setting": "Settings",
   "language": "Language",
   "hynPriceUnit": "USD",
   "hynPriceUnitSymbol": "\$",
