--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -258,7 +258,7 @@
   "receive_success_hint": "Receive Success",
   "over_limit_numbers": "Excess Quantity",
   "mortgage_fail_hint": "Mortgage Failure",
-  "n_days_product": "${days} days to produce",
+  "n_days_product": "${days} day produce",
   "power_martgage": "Powers Martgage",
   "product": "Product：",
   "amount": "Amount：",
@@ -323,9 +323,9 @@
   "node_mortgage_with_unit": "Node(USDT)",
   "get_power": "Get Power",
   "node_mortgage": "Node Staking",
-  "task_record": "Task Record",
-  "invite_share": "Invite and share",
-  "use_guide": "Tutorial",
+  "task_record": "Tasks",
+  "invite_share": "Share",
+  "use_guide": "Tutorials",
   "dmap_setting": "DMap Settings",
   "thank_you_for_contribute_data": "Thank you for your data contribution。",
   "withdrawal": "Withdraw",
