--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -248,7 +248,7 @@
   "navigation": "Start",
   "my_location": "My Location",
   "my_position": "My Location",
-  "get_powers": "Get Powers",
+  "get_powers": "Get HashRate",
   "node_martgage": "Node Martgage",
   "available_mortgage_numbers": "mort：${number}",
   "commiting": "Commiting",
@@ -259,7 +259,7 @@
   "over_limit_numbers": "Excess Quantity",
   "mortgage_fail_hint": "Mortgage Failure",
   "n_days_product": "${days} day produce",
-  "power_martgage": "Powers Martgage",
+  "power_martgage": "Get HashRate",
   "product": "Product：",
   "amount": "Amount：",
   "amount_copy_success_hint": "Amount copied successfully",
@@ -319,9 +319,9 @@
   "no_level": "No Level",
   "task": "Task",
   "my_account_with_unit": "Account(USDT)",
-  "my_power_with_unit": "Power(T)",
+  "my_power_with_unit": "HashRate(T)",
   "node_mortgage_with_unit": "Node(USDT)",
-  "get_power": "Get Power",
+  "get_power": "Get HashRate",
   "node_mortgage": "Node Staking",
   "task_record": "Tasks",
   "invite_share": "Share",
@@ -383,7 +383,7 @@
   "withdrawal_apply_success": "Withdrawal application is successful",
   "withdrawal_fail": "Withdrawal error",
   "without_hyn_wallet": "You don't have a HYN wallet yet.",
-  "my_total_power": "My Total Computing Power",
+  "my_total_power": "My Total HashRate",
   "effective": "Effective",
   "finished": "Finished",
   "my_node_mortgage": "My Node Staking",
@@ -414,7 +414,7 @@
   "tip_snap_up_balance_hint": "Tip: Snap up node can only stake with top-up balance",
   "map_ai_verificate": "Map AI verification",
   "turn_on_wifi_hint": "Turn on WiFi to scan more accurate signal maps",
-  "all_powers_func": "Total Computing Power：${totalPower}",
+  "all_powers_func": "Total HashRate：${totalPower}",
   "background_scan": "Background scan",
   "max_range_func": "Maximum range：${maxMeter} m",
   "total_invitation_func": "${totalInvitations} invitee",
@@ -466,5 +466,6 @@
   "unknown_error_hint": "An unknown error",
   "fund_pwd_error_hint": "Fund password error",
   "over_limit_hint": "exceed the limit",
-  "check_in_completed": "Done"
+  "check_in_completed": "Done",
+  "hashrate": "HashRate"
 }
