--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -466,5 +466,6 @@
   "unknown_error_hint": "알 수없는 오류",
   "fund_pwd_error_hint": "자금 조달 비밀번호 오류",
   "over_limit_hint": "한도 초과",
-  "check_in_completed": "종료"
+  "check_in_completed": "종료",
+  "hashrate": "계산 력"
 }
