--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -466,5 +466,6 @@
   "unknown_error_hint": "未知错误",
   "fund_pwd_error_hint": "资金密码错误",
   "over_limit_hint": "超过限制",
-  "check_in_completed": "完成"
+  "check_in_completed": "完成",
+  "hashrate": "算力"
 }
