home panel add switch hyperion intro url

--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -256,5 +256,6 @@
   "mainland_china": "中国大陆",
   "other_area": "其他地区",
   "app_area_setting": "区域",
-  "please_selecte_app_area": "请设置地图使用区域"
+  "please_selecte_app_area": "请设置地图使用区域",
+  "hyperion_project_intro_url": "https://shimo.im/docs/GDp72cj3ATwEB7ke/read"
 }
