--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -256,5 +256,6 @@
   "mainland_china": "Mainland China",
   "other_area": "Others",
   "app_area_setting": "Area",
-  "please_selecte_app_area": "Please set the region of the map"
+  "please_selecte_app_area": "Please set the region of the map",
+  "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412"
 }
