--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -256,5 +256,6 @@
   "mainland_china": "중국 대륙",
   "other_area": "기타 지역",
   "app_area_setting": "구역",
-  "please_selecte_app_area": "지도 사용 구역을 설정하십시오"
+  "please_selecte_app_area": "지도 사용 구역을 설정하십시오",
+  "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412"
 }
