--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -468,5 +468,6 @@
   "fund_pwd_error_hint": "자금 조달 비밀번호 오류",
   "over_limit_hint": "한도 초과",
   "check_in_completed": "종료",
-  "hashrate": "계산 력"
+  "hashrate": "계산 력",
+  "scan_wifi_map_style_url": "https://static.hyn.space/maptiles/see-it-all-boundary-cdn-en.json"
 }
