--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -469,5 +469,6 @@
   "over_limit_hint": "한도 초과",
   "check_in_completed": "종료",
   "hashrate": "계산 력",
-  "scan_wifi_map_style_url": "https://static.hyn.space/maptiles/see-it-all-boundary-cdn-en.json"
+  "scan_wifi_map_style_url": "https://static.hyn.space/maptiles/see-it-all-boundary-cdn-en.json",
+  "maprich_intro_url": "https://www.maprich.net/intro?lang=ko"
 }
