--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -469,5 +469,6 @@
   "over_limit_hint": "超过限制",
   "check_in_completed": "完成",
   "hashrate": "算力",
-  "scan_wifi_map_style_url": "https://cn.tile.map3.network/see-it-all-boundary-cdn-en.json"
+  "scan_wifi_map_style_url": "https://cn.tile.map3.network/see-it-all-boundary-cdn-en.json",
+  "maprich_intro_url": "https://www.maprich.net/intro?lang=zh_CN"
 }
