--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -470,5 +470,5 @@
   "check_in_completed": "Done",
   "hashrate": "HashRate",
   "scan_wifi_map_style_url": "https://static.hyn.space/maptiles/see-it-all-boundary-cdn-en.json",
-  "maprich_intro_url": "https://www.maprich.net/intro?lang=en"
+  "maprich_intro_url": "${rich_domain}intro?lang=en"
 }
