--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -470,5 +470,5 @@
   "check_in_completed": "完成",
   "hashrate": "算力",
   "scan_wifi_map_style_url": "https://cn.tile.map3.network/see-it-all-boundary-cdn-en.json",
-  "maprich_intro_url": "https://www.maprich.net/intro?lang=zh_CN"
+  "maprich_intro_url": "${rich_domain}intro?lang=zh_CN"
 }
