--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -471,5 +471,10 @@
   "hashrate": "算力",
   "scan_wifi_map_style_url": "https://cn.tile.map3.network/see-it-all-boundary-cdn-en.json",
   "maprich_intro_url": "${rich_domain}intro?lang=zh_CN",
-  "actual_amount_received":"(以实际到账数量为准)"
+  "actual_amount_received":"(以实际到账数量为准)",
+  "get_current_position_fail_tips": "获取不到你当前位置",
+  "open_location_service": "请开启定位服务",
+  "apply_location_service": "申请定位授权",
+  "allow_location_service": "请你授权使用定位功能.",
+  "again_click_exit_app": "再按一下退出程序"
 }
