[update] udpate ko translation

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -1,5 +1,5 @@
 {
-  "app_name": "성간굴금",
+  "app_name": "어플이름",
   "network_request_err": "네트워크 요청 오류가 있습니다,상태 코드번호: $code",
   "route": "루트",
   "no_recommended_route": "추천 루트가 없습니다.",
@@ -11,13 +11,13 @@
   "distance": "${distance}미터",
   "official_website": "공식 홈페이지",
   "forum": "포럼",
-  "telegram": "전보군",
-  "twitterhyperion": "트위터-헤버리안",
+  "telegram": "텔레그램",
+  "twitterhyperion": "트위트 하이페리온",
   "twittertitan": "트위터-타이탄",
   "medium": "중간",
-  "wechat": "공공번호",
-  "wechat_official_account": "서비스 번호",
-  "telegram_operator": "Telegram Operator",
+  "wechat": "위쳇",
+  "wechat_official_account": "위쳇 서비스번호",
+  "telegram_operator": "텔레그람 운영자",
   "wechat_cs": "위챗 고객센타",
   "new_update_available": "새로운 버전을 발견하였습니다.",
   "update_now": "업데이트중입니다.",
@@ -25,7 +25,7 @@
   "downloading_update_file": "업데이트 파일 다운로드중입니다.",
   "installation_update_package_failed": "업데이트 패키지를 설치하지 못했습니다.",
   "install_now": "바로 설치합니다.",
-  "app_version": "버전",
+  "app_version": "어플버전",
   "about_us": "우리에 대해서",
   "nav_my_privacy_map": "나의 개인정보 지도",
   "main_my_public_key": "나의 암호화 주소(공유키)",
@@ -44,12 +44,12 @@
   "share_fail": "공유 오류가 발생했습니다.",
   "share_location": "위치 공유",
   "driving": "차량 운전",
-  "cycling": "라이딩",
+  "cycling": "사이클링",
   "walking": "보행",
   "share_encrypted_location": "암호화 위치 공유",
   "add_share_options": "선택사항 공유",
   "accept_share_pub_key": "P2P 공유",
-  "receiver_encrypted_address": "수신자 암호화 주소(공유키)",
+  "receiver_encrypted_address": "공유키",
   "postscript": "부언",
   "postscript_hint": "부언 입력(50자이내로)",
   "public_key_scan_fail_rescan": "공유키 오류가 발생했습니다.다시 스캔해 주십시오",
@@ -75,7 +75,7 @@
   "improvement_plan_refuse": "참여 안함",
   "improvement_plan_title": "체험 프로그램 개선",
   "skip": "건너뛰기",
-  "Next": "다음 페이지",
+  "Next": "다음",
   "enter": "들어가기",
   "copyed": "복사 완료",
   "Clean": "흔적 지우기",
@@ -86,7 +86,7 @@
   "map3_global_nodes": "map3글로벌 노드",
   "global_nodes": "글로벌 노드",
   "global_map_server_nodes": "글로벌 지도 서비스 노드",
-  "Hyperion": "헤버리안",
+  "Hyperion": "하이페리온",
   "project_introduction": "프로젝트 소개",
   "data_contribute": "데이터 기여",
   "data_contribute_reward": "지도 데이터 기여로 HYN 인센티브 획득",
@@ -105,7 +105,7 @@
   "wallet": "지갑",
   "discover": "발견",
   "information": "뉴스",
-  "my_page": "나의 것",
+  "my_page": "내페이지",
   "hyn_market": "HYN 시세",
   "view_all": "전체 보기",
   "hyn_price": "HYN 지수",
@@ -115,8 +115,8 @@
   "private_and_safety": "프라이버시와 안전",
   "create_wallet": "지갑 새로 만들기",
   "import_wallet": "지갑 가져오기",
-  "private_wallet_tips": "계좌 비밀키는 영원히 설비와 갈라놓을수 없습니다.",
-  "create_wallet_tips": "프라이버시 계좌 새로 만들기",
+  "private_wallet_tips": "프라이빗 계좌.",
+  "create_wallet_tips": "프라이빗 계좌 새로반들기",
   "create_wallet_name_label": "지갑 명칭",
   "input_wallet_name_hint": "지갑 명칭을 입력해주십시오.",
   "input_wallet_name_length_hint": "6자리이내의 명칭을 입력해 주십시오.",
@@ -141,7 +141,7 @@
   "wallet_create_success_tips": "축하드립니다.당신의 비밀 계정이 성공적으로 만들어졌습니다.",
   "user_this_account": "비밀 계정 사용",
   "import_account": "계정 가져오기",
-  "illegal_mnemonic": "합법적인 도움말이 아닙니다.",
+  "illegal_mnemonic": "정상적인 기호가 아닙니다.",
   "input_resume_mnemonic": "뛰여쓰기로 구분된 백업 도움말을 입력해주십시오.",
   "please_input_mnemonic": "도움말을 입력해주십시오.",
   "paste": "붙히기",
@@ -189,9 +189,9 @@
   "input_count_over_balance": "잔액한도를초과하였습니다.",
   "account_is_empty": "계정이비어있습니다.",
   "gas_fee": "네트워크비용",
-  "speed_slow": "느리다",
-  "speed_normal": "평균치",
-  "speed_fast": "빠르다",
+  "speed_slow": "느린속도",
+  "speed_normal": "정상속도",
+  "speed_fast": "빠른속도",
   "please_waiting": "잠시만기다려주십시오.",
   "transfer_submitted": "계좌이체신청제출완료",
   "password_incorrect": "잘못된비밀번호입니다.",
@@ -203,7 +203,7 @@
   "dmap_document_title": "DMap 지도를문서에바인딩합니다.",
   "document_optimization": "문서최적화중입니다.",
   "map_dmap": "지도DMap",
-  "dmap_tools": "공구류",
+  "dmap_tools": "DMAP 도구",
   "private_sharing": "프라이버시공유",
   "private_sharing_text": "암호화위치를공유하시면절대로위치정보를누설하지않습니다.",
   "dmap_life": "생활가이드",
@@ -225,7 +225,7 @@
   "service_hours": "서비스시간",
   "service_area": "지역",
   "service_description": "설명",
-  "nightlife_guide": "나이트라이프가이드",
+  "nightlife_guide": "야간활동안내",
   "no_detail_address": "자세한주소가없습니다.",
   "department": "부서",
   "area": "지역",
@@ -233,7 +233,7 @@
   "kais_talk": "케이시 스토리",
   "latest_news": "최신 뉴스",
   "official_announcement": "공식 발표",
-  "information_guide": "교과과정",
+  "information_guide": "설명 및 안내",
   "information_video": "동영상",
   "article": "문장",
   "video": "동영상",
@@ -250,7 +250,7 @@
   "my_position": "나의위치",
   "get_powers": "계산력불러오기",
   "node_martgage": "노드저당",
-  "available_mortgage_numbers": "${number}부저당가능",
+  "available_mortgage_numbers": "${number}저당가능수",
   "commiting": "제출중입니다.",
   "mortgage": "저당",
   "free_receive": "무료수령",
@@ -263,7 +263,7 @@
   "product": "제품",
   "amount": "금액",
   "amount_copy_success_hint": "금액복사성공",
-  "please_mortgage": "저당하여주십시오.",
+  "please_mortgage": "저당을 설정하여 주십시요",
   "becharge_amount": "충전 잔액",
   "income_amount": "수익 잔액",
   "by_hyn": "HYN 사용",
@@ -371,14 +371,14 @@
   "mortgage_product_func": "저당제품：${name}",
   "Insufficient_balance_hint": "저당에필요한잔액이부족합니다.",
   "mortgage_success_hint": "저당성공",
-  "tip_node_mortgages_balances_hint": "제시:수익잔액을사용해만이노드를저당잡힐수있습니다.",
+  "tip_node_mortgages_balances_hint": "수익잔액을 사용해야만 이 노드를 저당설정할 수 있습니다.",
   "snap_up": "사이버스쿼팅",
   "snap_up_product_fuc": "사이버스쿼팅제품：${name}",
   "need_transfer": "전입필요",
   "snap_up_success_hint": "사이버스쿼팅성공",
   "snap_up_fail": "사이버스쿼팅실패",
   "confirm_snap_up": "사이버 스쿼팅 확인",
-  "tip_snap_up_balance_hint": "제시:사이버 스쿼팅 노드는충전잔액을사용해만이저당잡힐수있습니다.",
+  "tip_snap_up_balance_hint": "~저당을 설정할 수 있습니다.",
   "map_ai_verificate": "지도 AI 체크",
   "turn_on_wifi_hint": "보다 정확한 신호 맵을 스캔하려면 WiFi를 켜십시오.",
   "all_powers_func": "총계산력：${totalPower}",
@@ -437,7 +437,7 @@
   "city_recommendation": "도시추천",
   "search_exception": "검색오류",
   "ciphertext_exception_hint": "암호문이유효하지않거나만료되였습니다.",
-  "not_valid_public_key": "합법적인공유키가아닙니다.",
+  "not_valid_public_key": "정상적인 공유키가 아닙니다.",
   "setting": "설정",
   "language": "언어",
   "hynPriceUnit": "CNY",
@@ -462,7 +462,7 @@
   "no_content_hint": "내용이없습니다.",
   "content_conflict_hint": "내용충돌",
   "insufficient_permission_hint": "권한부족",
-  "unauthorized": "미권한",
+  "unauthorized": "권한없슴",
   "para_error_hint": "파라미터오류",
   "unknown_error_hint": "알수없는오류",
   "fund_pwd_error_hint": "자금비밀번호오류",
